# TGTools

./: .gitignore  .gitmodules  .travis.yml  Doxyfile  README.md
TGTools/: CMakeLists.txt  CMakeSettings.json
TGTools/TGTools/: Actor.cpp  Actor.hpp  CMakeLists.txt  Font.cpp  Font.hpp  Map.cpp  Map.hpp  Result.hpp  Texture.cpp  Texture.hpp  Util.hpp
TGTools/TGTools/private/: Actor.cpp  Buffer.cpp  Font.cpp  Map.cpp  Material.cpp  Model.cpp  Pipe.cpp  Sampler.cpp  Shader.cpp  Texture.cpp
TGTools/TGTools/public/: Actor.hpp  Buffer.hpp  Font.hpp  Map.hpp  Material.hpp  Model.hpp  Pipe.hpp  Result.hpp  Sampler.hpp  Shader.hpp  Texture.hpp  Util.hpp
TGTools/TGToolsConsole/: CMakeLists.txt  TGTools.cpp  TGTools.h
TGTools/TGToolsTest/: CMakeLists.txt  TGToolsModelTest.cpp  TGToolsTest.cpp
TGTools/enc_temp_folder/babc201661ab20c24f6bee651776312/: Sampler.hpp
Tests/: tests.py
docs/html/: _actor_8cpp.html  _actor_8cpp.js  _actor_8cpp__incl.dot  _actor_8hpp.html  _actor_8hpp.js  _actor_8hpp__dep__incl.dot  _actor_8hpp__incl.dot  _actor_8hpp_source.html  _c_make_lists_8txt.html  _font_8cpp.html  _font_8cpp.js  _font_8cpp__incl.dot  _font_8hpp.html  _font_8hpp.js  _font_8hpp__dep__incl.dot  _font_8hpp__incl.dot  _font_8hpp_source.html  _form0_tmp.ps  _formulas.dvi  _map_8cpp.html  _map_8cpp.js  _map_8cpp__incl.dot  _map_8hpp.html  _map_8hpp.js  _map_8hpp__dep__incl.dot  _map_8hpp__incl.dot  _map_8hpp_source.html  _material_8cpp.html  _material_8cpp.js  _material_8cpp__incl.dot  _material_8hpp.html  _material_8hpp.js  _material_8hpp__dep__incl.dot  _material_8hpp__incl.dot  _material_8hpp_source.html  _result_8hpp.html  _result_8hpp.js  _result_8hpp__dep__incl.dot  _result_8hpp_source.html  _shader_8cpp.html  (+658 more)
docs/html/search/: all_0.js  (+156 more)
docs/latex/: _actor_8cpp.tex  _actor_8cpp__incl.dot  _actor_8hpp.tex  _actor_8hpp__dep__incl.dot  _actor_8hpp__incl.dot  _font_8cpp.tex  _font_8cpp__incl.dot  _font_8hpp.tex  _font_8hpp__dep__incl.dot  _font_8hpp__incl.dot  _map_8cpp.tex  _map_8cpp__incl.dot  _map_8hpp.tex  _map_8hpp__dep__incl.dot  _map_8hpp__incl.dot  _material_8cpp.tex  _material_8cpp__incl.dot  _material_8hpp.tex  _material_8hpp__dep__incl.dot  _material_8hpp__incl.dot  _result_8hpp.tex  _result_8hpp__dep__incl.dot  _shader_8cpp.tex  _shader_8cpp__incl.dot  _shader_8hpp.tex  _shader_8hpp__dep__incl.dot  _shader_8hpp__incl.dot  _texture_8cpp.tex  _texture_8cpp__incl.dot  _texture_8hpp__dep__incl.dot  _texture_8hpp__incl.dot  _util_8hpp.tex  _util_8hpp__dep__incl.dot  _util_8hpp__incl.dot  annotated.tex  classnlohmann_1_1basic__json.tex  classnlohmann_1_1basic__json_a012e375f4016b89444c528ed46cce3af_cgraph.dot  classnlohmann_1_1basic__json_a0181d03c6314bedcbad2e92d3676223c_cgraph.dot  classnlohmann_1_1basic__json_a02c9bc4d0f33b7dec20b2798301d6971_cgraph.dot  classnlohmann_1_1basic__json_a044298d189bdf7e4b36492de9811ddd6_cgraph.dot  (+491 more)
glsl/lib/: HLSL.lib  OGLCompiler.lib  OSDependent.lib  SPVRemapper.lib  glslang.lib
(+318 files in other folders)
